--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,8 @@ test:
 production:
   <<: *default
   database: freemarket_sample_41a_production
-  username: freemarket_sample_41a
-  password: <%= ENV['FREEMARKET_SAMPLE_41A_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+
+  
